--- a/index.html
+++ b/index.html
@@ -1,6 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>JPOOO[okpoijsds</title>
+        <link rel="stylesheet" href="styles.css">
+        <meta charset="utf-8">
+        <title>SI2Projekat</title>
+        
     </head>
+    <body>
+        <header>
+            <nav>
+                <div class="logo">
+                    <img src="https://img0-placeit-net.s3-accelerate.amazonaws.com/uploads/stage/stage_image/57363/optimized_large_thumb_stage.jpg" alt="nema"/>
+                </div>
+                <div class="search">
+                    <forms>
+                    <input type="text" id="trazilica" placeholder="Search" name="search">
+                    <button type="submit"><img src="https://cdn-icons-png.flaticon.com/512/1167/1167055.png" alt="magnifying glass" /></button>
+                </forms>
+                </div>
+            </nav>
+        </header>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
+
+    </body>
 </html>
