--- a/all.html
+++ b/all.html
@@ -20,6 +20,19 @@
             color:black;
 
         }
+        section {
+            margin: 50px 40px;
+        }
+        section .red {
+            display: flex;
+            margin: 40px 10px;
+        }
+        section .card:hover{
+            opacity: 0.5;
+            transition:cubic-bezier(1, 0, 0, 1);
+            cursor: pointer;
+        }
+
       </style>
       <title>All Products</title>
       
@@ -66,7 +79,7 @@
 
 
 
-
+            <section>
             <div class="red">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="https://books.ba/images/stories/virtuemart/product/9781472273901.jpg" alt="Card image cap">
@@ -93,6 +106,9 @@
                 </div>
               </div>
             </div>
+
+
+
 
             <div class="red">
               <div class="card" style="width: 18rem;">
@@ -216,7 +232,7 @@
 
 
 
-
+            </section>
           </main>
 
 
