--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
       <link rel="stylesheet" href="styles.css"/>
+      
       <title>SI2Projekat</title>
       
     </head>
@@ -362,9 +363,9 @@
           <h4>Contact:</h4>
           <p>
             <ul>
-              <li>Instagram: <a href="nema.html">@thriftyy.la</a></li>
-              <li>Twitter: <a href="nema.html">ThrifTy</a></li>
-              <li>Pinterest: <a href="nema.html">thrifty</a></li>
+              <li>Instagram: <a href="nema.html" target="_blank">@thriftyy.la</a></li>
+              <li>Twitter: <a href="nema.html"  target="_blank">ThrifTy</a></li>
+              <li>Pinterest: <a href="nema.html" target="_blank">thrifty</a></li>
             </ul>
           </p>
         </div>
