--- a/index.html
+++ b/index.html
@@ -17,30 +17,15 @@
         <header>
           <!--navigation-->
            <nav class="navigacija">
-              
+              <div class="navig">
               <div class="logom">
                 <a href="index.html"><button class="logo"><i class="bi bi-bookshelf"></i>Thrifty</button></a>
               </div><div class="abtus">
                 <a href="aboutus.html"><button class="abt">About Us</button></a>
               </div>
-            <div class="dropdown">
-                <button class="dropbtn">Search By</button>
-                <div class="dropdown-content">
-                  <a href="all.html">Genre</a>
-                  <a href="all.html">Cover</a>
-                  <a href="all.html">Author</a>
-                </div>
+              <a href="all.html"><button class="abt">All books</button></a>
+              <a href="search.html"><button class="abt">Search</button></a>
               </div>
-                <!--search bar-->
-              <form class="search">
-                  <div class="input-group">
-                  <input class="searchBar" placeholder="Search" name="srch-term" type="text">
-                  <div class="input-group-btn">
-                  <button type="submit" id="searchbtn"><i class="bi bi-search"></i></button>
-                  </div>
-                  </div>
-                  </form>
-
                 <a href="signup.html"><button type="button" class="btn btn-dark m-2" style="width: 115px;">Sign up</button></a>
             </div>
           
@@ -59,19 +44,19 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="read1.jpg" alt="First slide">
+                <img class="d-block w-100" src="images/read1.jpg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                 <h1>“A reader lives a thousand lives before he dies... The man who never reads lives only one.”</h1>
                 <p>-George R.R. Martin</p>
               </div></div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="read2.jpg" alt="Second slide">
+                <img class="d-block w-100" src="images/read2.jpg" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
                   <h1>“Books serve to show a man that those original thoughts of his aren’t very new after all.”</h1>
                 <p>-Abraham Lincoln</p>
               </div></div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="read3.jpg" alt="Third slide">
+                <img class="d-block w-100" src="images/read3.jpg" alt="Third slide">
                 <div class="carousel-caption d-none d-md-block">
                   <h1>“Books are a uniquely portable magic.”</h1>
                   <p>-Stephen King</p>
@@ -374,7 +359,7 @@
         </div>
         </footer>
 
-
+        <script src="akcija.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
